@@ -52,18 +52,37 @@ The returned lists may contain duplicates, and are unsorted."
     (let* ((width (screen-width))
            (height (screen-height))
            (vp-offset (viewport-offset-coord viewport))
+           (cur-vp (and viewport (screen-viewport)))
+           (x-offset (and viewport (* (screen-width)
+                                      (- (car viewport)
+                                         (car cur-vp)))))
+           (y-offset (and viewport (* (screen-height)
+                                      (- (cdr viewport)
+                                         (cdr cur-vp)))))
            x-edges y-edges)
       (map-windows
        (lambda (w)
 	 (when (and (window-mapped-p w)
 		    (window-visible-p w)
-		    (not (window-outside-viewport-p w viewport))
+                    (or (window-get w 'sticky-viewport)
+                        (not (window-outside-viewport-p w viewport)))
 		    (or with-ignored-windows
 			(not (window-get w 'ignored)))
 		    (not (memq w windows-to-ignore))
 		    (or (not (listp windows)) (memq w windows)))
            (let ((dims (window-frame-dimensions w))
-                 (coords (window-position w)))
+                 (coords (if (and viewport
+                                  (window-get w 'sticky-viewport)
+                                  (not (and (equal (car viewport)
+                                                   (car cur-vp))
+                                            (equal (cdr viewport)
+                                                   (cdr cur-vp)))))
+                             ;; Simulate the presence of w in
+                             ;; the specified viewport:
+                             (let ((pos (window-position w)))
+                               (cons (+ (car pos) x-offset)
+                                     (+ (cdr pos) y-offset)))
+                           (window-position w))))
              (setq x-edges (cons (list (car coords) (cdr coords)
                                        (+ (cdr coords) (cdr dims)) t)
                                  (cons (list (+ (car coords) (car dims))
