@@ -1,3 +1,9 @@
+2010-08-14  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/state/maximize.jl
+	* lisp/sawfish/wm/util/edges.jl
+	* lisp/sawfish/wm/util/workarea.jl: Fixed bug where maximized
+		  windows could overlap avoided windows on restart.
+
 2010-08-13  Christopher Bratusek <zanghar@freenet.de>
 	* src/flippers.c
 	* lisp/sawfish/wm/ext/edge-flip.jl: make edge-flipping work after
